Code quality improvements: removed constructors and added @RequiredArgsConstructor annotation, other minor changes.